--- a/.github/workflows/super_linter.yml
+++ b/.github/workflows/super_linter.yml
@@ -1,3 +1,4 @@
+---
 name: Lint Code Base
 
 #
@@ -16,7 +17,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
+          # Full git history is needed
           fetch-depth: 0
 
       - name: Lint Code Base
