--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -7,12 +7,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: make
- 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install biblatex
+
+      - name: run Makefile
+        run: make
+
