--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -3,7 +3,7 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
@@ -15,8 +15,9 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install biblatex
-
+          sudo apt-get install texlive-full
+          sudo apt-get install texmaker
+          sudo apt-get install texlive-bibtex-extra
+          sudo apt-get install biber
       - name: run Makefile
         run: make
-
